Reword technical feasibility

--- a/report/report.tex
+++ b/report/report.tex
@@ -628,12 +628,12 @@ objectives.
 
 \subsection{Technical Feasibility}
 \begin{itemize}
-  \item \textbf{Platform:} Java backend using Spring Boot for RESTful APIs
+  \item \textbf{Platform:} Java backend using Spring for RESTful APIs
     ensures scalability and maintainability.
   \item \textbf{Frontend:} Svelte for building a dynamic, responsive, and
     lightweight user interface.
   \item \textbf{Database:} PostgreSQL for reliable and scalable data storage.
-  \item \textbf{Testing:} JUnit for unit testing and Maven for dependency
+  \item \textbf{Ecosystem:} JUnit for unit testing and Maven for dependency
     management.
   \item \textbf{Server:} DigitalOcean provides reliable cloud hosting with
     necessary configurations.
