--- a/report/report.tex
+++ b/report/report.tex
@@ -439,8 +439,20 @@ Manisa Celâl Bayar University, 45140 Manisa, Türkiye.}% <-this % stops a space
 % As a general rule, do not put math, special symbols or citations
 % in the abstract or keywords.
 \begin{abstract}
-% TODO: Write the abstract.
-The abstract goes here.
+This project focuses on designing and implementing an online technology store.
+The system is built with a Java backend using the Spring framework.
+The frontend is developed with Svelte.
+PostgreSQL is chosen as the database solution for its reliability and
+scalability in managing extensive datasets.
+
+The project adopts Maven as the build automation and dependency management tool
+to streamline the development process, JUnit is utilized for unit tests,
+and DigitalOcean is used as the cloud provider.
+
+The Kanban methodology is employed for task
+management, and GitHub Projects is used to track progress and collaboration
+within the team.
+Integration tests are automated via GitHub Actions.
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
